--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
         "@tailwindcss/forms": "^0.5.3",
         "@vitejs/plugin-vue": "^4.5.0",
         "autoprefixer": "^10.4.12",
-        "axios": "^1.6.1",
+        "axios": "^1.6.5",
         "laravel-vite-plugin": "^1.0.0",
         "postcss": "^8.4.31",
         "tailwindcss": "^3.2.1",
+        "unplugin-auto-import": "^0.17.3",
+        "unplugin-vue-components": "^0.26.0",
         "vite": "^5.0.0",
         "vue": "^3.2.41"
+    },
+    "dependencies": {
+        "element-plus": "^2.4.4"
     }
 }
